[gd_scene load_steps=17 format=2]

[ext_resource path="res://object/user_interface/user_interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://object/btn_menu/btn_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://object/dialog/dialog_bottom.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/frame2/menu.gd" type="Script" id=4]
[ext_resource path="res://asset/sprite2D/UI/p4.png" type="Texture" id=5]
[ext_resource path="res://asset/sprite2D/UI/d2.png" type="Texture" id=6]
[ext_resource path="res://asset/sprite2D/UI/d3.png" type="Texture" id=7]
[ext_resource path="res://asset/sprite2D/UI/p3.png" type="Texture" id=8]
[ext_resource path="res://asset/sprite2D/UI/p5.png" type="Texture" id=9]
[ext_resource path="res://asset/sprite2D/UI/d5.png" type="Texture" id=10]
[ext_resource path="res://asset/sprite2D/lab/KHV_258x436.png" type="Texture" id=11]
[ext_resource path="res://asset/sprite2D/UI/p2.png" type="Texture" id=12]
[ext_resource path="res://asset/sprite2D/UI/d4.png" type="Texture" id=13]
[ext_resource path="res://asset/sprite2D/UI/bg_menu.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "MENU_START"
tracks/0/type = "value"
tracks/0/path = NodePath("Interface/VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1060, 650 ), Vector2( 1060, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Interface/VBoxContainer/VatLieuHoaChat:rect_min_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 85, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Interface/VBoxContainer/CauTaoKHV:rect_min_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85, 300 ), Vector2( 85, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Interface/VBoxContainer/HoatDongKHV:rect_min_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85, 300 ), Vector2( 85, 100 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Interface/VBoxContainer/ThucHanh:rect_min_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85, 300 ), Vector2( 85, 100 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Interface/VBoxContainer/KiemTra:rect_min_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85, 300 ), Vector2( 85, 100 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Interface/VBoxContainer:rect_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85, 1316 ), Vector2( 85, 516 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Interface/KinhHienVi:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.1, 1.1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Interface/VBoxContainer:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1060, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Interface/VBoxContainer/VatLieuHoaChat:rect_min_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 85, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Interface/VBoxContainer/CauTaoKHV:rect_min_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 85, 100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Interface/VBoxContainer/HoatDongKHV:rect_min_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 85, 100 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Interface/VBoxContainer/ThucHanh:rect_min_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 85, 100 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Interface/VBoxContainer/KiemTra:rect_min_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 85, 100 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Interface/VBoxContainer:rect_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 85, 516 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Interface/KinhHienVi:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.45, 0.45 ) ]
}

[node name="Menu" type="Node"]
script = ExtResource( 4 )

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
expand = true

[node name="KinhHienVi" type="Sprite" parent="Interface"]
position = Vector2( 409, 350 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="Interface"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -250.0
margin_right = -55.0
margin_bottom = 266.0
alignment = 1

[node name="VatLieuHoaChat" parent="Interface/VBoxContainer" instance=ExtResource( 2 )]

[node name="LabelDialogBox" parent="Interface/VBoxContainer/VatLieuHoaChat/SpriteDialogBox" index="0"]
text = "Vật liệu và hóa chất"

[node name="CauTaoKHV" parent="Interface/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 104.0
margin_bottom = 204.0
texture_normal = ExtResource( 12 )
texture_disabled = ExtResource( 6 )

[node name="LabelDialogBox" parent="Interface/VBoxContainer/CauTaoKHV/SpriteDialogBox" index="0"]
text = "Cấu tạo của kính hiển vi"

[node name="HoatDongKHV" parent="Interface/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 208.0
margin_bottom = 308.0
texture_normal = ExtResource( 8 )
texture_disabled = ExtResource( 7 )

[node name="LabelDialogBox" parent="Interface/VBoxContainer/HoatDongKHV/SpriteDialogBox" index="0"]
text = "Hoạt động  của kính hiển vi"

[node name="ThucHanh" parent="Interface/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 312.0
margin_bottom = 412.0
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 13 )

[node name="LabelDialogBox" parent="Interface/VBoxContainer/ThucHanh/SpriteDialogBox" index="0"]
text = "Thực hành"

[node name="KiemTra" parent="Interface/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 416.0
margin_bottom = 516.0
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 10 )

[node name="LabelDialogBox" parent="Interface/VBoxContainer/KiemTra/SpriteDialogBox" index="0"]
text = "Kiểm tra"

[node name="AnimationLogin" type="AnimationPlayer" parent="."]
anims/MENU_START = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialog" parent="CanvasLayer" instance=ExtResource( 3 )]
unique_name_in_owner = true
visible = false
mouse_filter = 1
isViewBackgroundBlack = false
is_show_btn_index = true

[node name="UserInterface" parent="CanvasLayer" instance=ExtResource( 1 )]

[connection signal="button_up" from="Interface/VBoxContainer/VatLieuHoaChat" to="." method="_on_VatLieuHoaChat_button_up"]
[connection signal="button_up" from="Interface/VBoxContainer/CauTaoKHV" to="." method="_on_CauTaoKHV_button_up"]
[connection signal="button_up" from="Interface/VBoxContainer/HoatDongKHV" to="." method="_on_HoatDongKHV_button_up"]
[connection signal="button_up" from="Interface/VBoxContainer/ThucHanh" to="." method="_on_ThucHanh_button_up"]
[connection signal="button_up" from="Interface/VBoxContainer/KiemTra" to="." method="_on_KiemTra_button_up"]
[connection signal="animation_finished" from="AnimationLogin" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Interface/VBoxContainer/VatLieuHoaChat"]
[editable path="Interface/VBoxContainer/CauTaoKHV"]
[editable path="Interface/VBoxContainer/HoatDongKHV"]
[editable path="Interface/VBoxContainer/ThucHanh"]
[editable path="Interface/VBoxContainer/KiemTra"]
